<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/filter_type"
        android:checkableBehavior="single"
        android:enabled="true"
        android:orderInCategory="2"
        android:visible="true">
        <item
            android:id="@+id/filter_contains"
            android:title="@string/contains" />
        <item
            android:id="@+id/filter_starts_with"
            android:title="@string/starts_with" />
        <item
            android:id="@+id/filter_ends_with"
            android:title="@string/ends_with" />
        <item
            android:id="@+id/filter_inner_it"
            android:title="@string/inner_it" />
    </group>
    <group
        android:id="@+id/about"
        android:orderInCategory="10">
        <item
            android:id="@+id/about_info"
            android:checkable="false"
            android:title="@string/about" />
    </group>
    <group
        android:id="@+id/dictionary"
        android:checkableBehavior="single"
        android:orderInCategory="20">
        <item
            android:id="@+id/dict_oxford"
            android:title="@string/dict_oxford" />
        <item
            android:id="@+id/dict_langdao"
            android:title="@string/dict_langdao" />
    </group>
</menu>