<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/group1"
        android:checkableBehavior="single"
        android:visible="true"
        android:enabled="true"
        android:menuCategory="secondary">
        <item
            android:id="@+id/color_a"
            android:title="@string/color_a" />
        <item
            android:id="@+id/color_b"
            android:title="@string/color_b"/>
        <item
            android:id="@+id/color_c"
            android:title="@string/color_c"/>
        <item
            android:id="@+id/color_d"
            android:title="@string/color_d"/>
        <item
            android:id="@+id/color_e"
            android:title="@string/color_e"/>
    </group>
</menu>